# InfiniteTypes

./: .gitignore  ContextRefT.hs  ContextT.hs  Fix.hs  Graph.hs  GraphT.hs  Infer.hs  InfiniteTypes.cabal  InfiniteTypes.hs  InfiniteTypes.lkshw  Misc.hs  MonadicEq.hs
src/: ContextT.hs  Fix.hs  InfiniteTypes.hs  Main.hs  Misc.hs
