name: InfiniteTypes
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, containers -any, fixed-list -any,
               mtl -any, parsec >=3, prettyclass >=1
stability:
homepage: https://github.com/jvranish/InfiniteTypes
package-url:
bug-reports:
synopsis: Experiment with infinite types
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: InfiniteTypes
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Main Misc InfiniteTypes GraphT Fix ContextT
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: